--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,4 @@
+
 body {
     margin: 0;
     background: repeating-linear-gradient(35deg, darkgray 200px, black 220px);
@@ -12,7 +13,7 @@ nav {
     font-weight: 900;
 }
 
-#container {
+#container, main {
     width: 80%;
     margin: 5vh auto;
     display: flex;
@@ -23,6 +24,7 @@ nav {
 .row {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
     border: 2px solid #000;
     padding: 10px;
@@ -30,12 +32,51 @@ nav {
     background: white;
 }
 
+.row h3 {
+    background: lightgray;
+    border: 1px solid #000;
+    padding: 5px;
+    margin: 0 5px;
+    border-radius: 8px;
+    font-size: 2.5rem;
+}
+
 .row input {
     padding: 5px;
 }
 
-#newClient {
+.row div {
+    display: flex;
+}
+
+button {
     background: seagreen;
     color: white;
     border-radius: 5px;
+    font-weight: 900;
+}
+
+.btnsDiv {
+    display: flex;
+    height: 100%;
+}
+
+.remainDiv {
+    display: flex;
+    justify-content: space-between;
+    width: 25%;
+}
+
+.minusHalf {
+    background: red;
+    font-weight: 900;
+}
+
+.remain {
+    font-size: 3rem;
+    padding: 0 20px;
+    margin: 0 5px;
+    background: lightgray;
+    border: 2px solid black;
+    border-radius: 8px;
 }
