--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,16 +4,18 @@
 
 body {
     margin: 0;
-    background: repeating-linear-gradient(35deg, darkgray 200px, black 220px);
+    background: repeating-linear-gradient(35deg, darkgray 10px, black 11px);
     background-attachment: fixed;
 }
 nav {
     background: linear-gradient(35deg, grey 40%, black 90%);
     text-align: center;
-    font-size: 2rem;
-    color: white;
+    font-size: 2.5rem;
+    color:  white;
+    font-family: sans-serif;
     padding: 5px;
     font-weight: 900;
+    border-bottom: 1px solid #000;
 }
 
 #container, main {
@@ -33,13 +35,20 @@ nav {
     border: 2px solid #000;
     justify-content: space-between;
     height: 35px;
+    opacity: .80;
+    flex-wrap: wrap;
+    
+}
+
+.headers {
+    width: 100%;
 }
 
 .row > * {
     display: flex;
     align-self: stretch;
     justify-content: space-between;
-    font-size: 170%;
+    font-size: 1.5vw;
     font-weight: 900;
     width: 30%;
 }
@@ -53,6 +62,10 @@ nav {
 .titleDiv {
     display: flex;
     justify-content: space-between;
+}
+
+.tc {
+    justify-content: center;
 }
 
 .title {
@@ -96,4 +109,5 @@ button {
     color: white;
     border-radius: 5px;
     font-weight: 900;
+    align-items: center;
 }
