--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7,20 +7,29 @@ body {
     background: repeating-linear-gradient(35deg, darkgray 10px, black 11px);
     background-attachment: fixed;
 }
+
 nav {
     background: linear-gradient(35deg, grey 40%, black 90%);
     text-align: center;
     font-size: 2.5rem;
-    color:  white;
+    color: white;
     font-family: sans-serif;
     padding: 5px;
     font-weight: 900;
     border-bottom: 1px solid #000;
 }
 
-#container, main {
+#container {
     width: 80%;
-    margin: 5vh auto;
+    margin: 5vh auto 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+#main {
+    width: 100%;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -34,17 +43,12 @@ nav {
     background: white;
     border: 2px solid #000;
     justify-content: space-between;
-    height: 35px;
     opacity: .80;
     flex-wrap: wrap;
-    
+
 }
 
-.headers {
-    width: 100%;
-}
-
-.row > * {
+.row>* {
     display: flex;
     align-self: stretch;
     justify-content: space-between;
@@ -88,11 +92,11 @@ nav {
     justify-content: space-between;
 }
 
-.row > *:not(:last-child) {
+.row>*:not(:last-child) {
     margin-right: 5%;
 }
 
-.btnsDiv > * {
+.btnsDiv>* {
     width: 25%;
 }
 
@@ -110,4 +114,18 @@ button {
     border-radius: 5px;
     font-weight: 900;
     align-items: center;
+}
+
+.row:nth-child(2) {
+    border-radius: 8px 8px 0 0;
+    border-bottom: none;
+    margin-top: 5vh;
+}
+
+.row:nth-child(1) {
+    border-radius: 0 0 8px 8px;
+}
+
+#newClientDiv {
+    border-radius: 8px;
 }
