--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -35,24 +35,29 @@ nav {
     justify-content: space-between;
 }
 
+#labels {
+    border-radius: 8px 8px 0 0;
+}
+
 .row {
     padding: 5px;
     display: flex;
     flex-basis: 100%;
-    border-radius: 8px;
+    border-radius: 4px;
     background: white;
-    border: 2px solid #000;
+    border: 1px solid #000;
     justify-content: space-between;
-    opacity: .80;
+    opacity: .85;
     flex-wrap: wrap;
+    border-radius: 0;
 
 }
 
-.row>* {
+.row > * {
     display: flex;
     align-self: stretch;
     justify-content: space-between;
-    font-size: 1.5vw;
+    font-size: 2vw;
     font-weight: 900;
     width: 30%;
 }
@@ -86,6 +91,7 @@ nav {
     margin-right: 0;
     background: yellow;
     color: gray;
+    font-size: 1vw;
 }
 
 .remainDiv {
@@ -116,16 +122,39 @@ button {
     align-items: center;
 }
 
-.row:nth-child(2) {
-    border-radius: 8px 8px 0 0;
-    border-bottom: none;
-    margin-top: 5vh;
-}
-
-.row:nth-child(1) {
-    border-radius: 0 0 8px 8px;
-}
-
 #newClientDiv {
-    border-radius: 8px;
+    border-radius: 4px;
+    margin-bottom: 20px;
+    background: white;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    border: 2px solid #000;
+}
+
+#newClientDiv > * {
+    align-items: center;
+    width: 12%;
+    margin: 0 5px;
+    /* border: 1px solid #000; */
+    border-radius: 0;
+    font-size: 1vw;
+    text-align: center;
+}
+
+#activeClients, #remainHours {
+    background: seagreen;
+    border: 2px solid #000;
+    justify-content: center;
+    color: black;
+    padding: 5px;
+    width: auto;
+}
+
+#summary {
+    width: 30%;
+    border: 2px solid #000;
+    background: lightskyblue;
+    padding: 5px;
+    font-size: 1.2vw;
 }
