--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -86,12 +86,111 @@ nav {
     padding: 5px;
 }
 
+.dateLabel {
+    width: 50%;
+    padding: 5px;
+    flex-direction: column;
+    font-size: 1.4vw;
+}
+
+.datesDiv {
+    width: 46%;
+    margin: 5px auto;
+    padding: 10px;
+    background: lightgray;
+    border: 2px solid #000;
+    display: contents;
+    /* flex-wrap: wrap; */
+}
+
+table {
+    width: 48%;
+}
+
+tr {
+    border: 1px solid #000;
+}
+
+tr:nth-child(odd) {
+    background: white;
+}
+
+th {
+    border: 1px solid black;
+    background: #29293c;
+    color: white;
+    text-align: left;
+    padding: 0 0 0 10px;
+    font-size: 1.5vw;
+}
+
+td {
+    padding: 0 0 0 10px;
+    border: 1px solid #000;
+    font-size: 1vw;
+}
+
+
+
+.datesDiv > span:nth-child(odd) {
+    font-size: 1vw;
+    width: 18%;
+    margin: 1%;
+}
+
+.datesDiv > span:nth-child(even) {
+    font-size: 1vw;
+    width: 10%;
+    margin: 1%;
+}
+
+.focusDiv {
+    width: 40%;
+    padding: 20px;
+    flex-wrap: wrap;
+}
+
+.focusDiv h1 {
+    width: 100%;
+    text-align: center;
+    background: lightgray;
+    justify-content: center;
+    font-size: 1.5vw;
+    margin-right: 0 !important;
+    margin-bottom: 10px;
+}
+
+.focusDiv h4 {
+    width: 48%;
+    margin: 2px;
+}
+
 .focus {
     width: 20%;
     margin-right: 0;
     background: lightgray;
     color: black;
     font-size: 1vw;
+}
+
+.hourDiv {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.hourDiv h5 {
+    margin: 0;
+}
+
+.hourDiv span {
+    background: black;
+    padding: 5px;
+    border-radius: 8px;
+    width: 15%;
+    text-align: center;
+    color: lightseagreen;
 }
 
 .remainDiv {
@@ -102,10 +201,6 @@ nav {
 .remainDiv > span {
     width: 5%;
     text-align: center;
-}
-
-.row>*:not(:last-child) {
-    margin-right: 5%;
 }
 
 .btnsDiv>* {
