--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,3 @@
-/* .row > * {
-    border: 1px solid red;
-} */
 
 body {
     margin: 0;
@@ -117,7 +114,7 @@ tr:nth-child(odd) {
 
 th {
     border: 1px solid black;
-    background: #29293c;
+    background: #484848;
     color: white;
     text-align: left;
     padding: 0 0 0 10px;
@@ -148,16 +145,31 @@ td {
     width: 40%;
     padding: 20px;
     flex-wrap: wrap;
+    background: lightgray;
+}
+
+.focusHead {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px;
+    width: 100%;
+    align-items: center;
+    background: #484848;
+    border: 1px solid #000;
+}
+
+.focusHead h1 {
+    background: none;
+    color: white;
 }
 
 .focusDiv h1 {
     width: 100%;
-    text-align: center;
-    background: lightgray;
-    justify-content: center;
     font-size: 1.5vw;
     margin-right: 0 !important;
     margin-bottom: 10px;
+    text-align: center;
+    justify-content: center;
 }
 
 .focusDiv h4 {
@@ -175,22 +187,21 @@ td {
 
 .hourDiv {
     display: flex;
-    justify-content: space-between;
+    align-items: flex-start;
     flex-wrap: wrap;
-    align-items: center;
+    width: 50%;
 }
 
-.hourDiv h5 {
+.hourDiv th {
     margin: 0;
+    padding: 0 5px;
+    text-align: center;
 }
 
-.hourDiv span {
-    background: black;
+.hourDiv td {
     padding: 5px;
-    border-radius: 8px;
-    width: 15%;
+    font-size: 1.5vw;
     text-align: center;
-    color: lightseagreen;
 }
 
 .remainDiv {
@@ -200,7 +211,12 @@ td {
 
 .remainDiv > span {
     width: 5%;
-    text-align: center;
+    font-size: 1.5vw;
+    height: 100%;
+    text-align: left;
+    align-items: center;
+    display: flex;
+    justify-content: center;
 }
 
 .btnsDiv>* {
@@ -208,13 +224,14 @@ td {
 }
 
 .minusHalf {
-    background: #b11c1c;
+    background: #810a0a;
 }
 
 button {
     background: seagreen;
     color: white;
     border-radius: 5px;
+    font-size: 1.5vw;
     font-weight: 900;
     align-items: center;
 }
@@ -240,7 +257,7 @@ button {
 }
 
 #activeClients, #remainHours {
-    background: #b11c1c;
+    background: #810a0a;
     border: 2px solid #000;
     justify-content: center;
     color: white;
