--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -1,3 +1,6 @@
+:root * {
+    transition: all 1s ease-in-out;
+}
 
 body {
     margin: 0;
@@ -45,6 +48,25 @@ label {
     flex-wrap: wrap;
 }
 
+#tutorDiv {
+    background: white;
+    width: 100%;
+    margin: 0 auto;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#tutorDiv * {
+    margin: 5px;
+}
+
+.tutorInnerDiv {
+    display: flex;
+    justify-content: space-around;
+}
+
 .section_2 {
     display: flex;
     width: 100%;
@@ -55,7 +77,6 @@ label {
     background: #dbdbdb;
     justify-content: space-around;
     overflow: hidden;
-    transition: height 1s ease-in-out;
     position: fixed;
     opacity: 0;
 }
