--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,9 +1,11 @@
+:root * {
+    transition: all 1s ease-in-out;
+}
 
 body {
     margin: 0;
     background: repeating-linear-gradient(35deg, darkgray 10px, black 11px);
     background-attachment: fixed;
-    height: 150vh;
 }
 
 nav {
@@ -33,46 +35,127 @@ nav {
     justify-content: space-between;
 }
 
-#labels {
-    border-radius: 8px 8px 0 0;
+label {
+    font-size: 1.2rem;
+    font-weight: 900;
 }
 
 .row {
-    padding: 5px;
     display: flex;
     flex-basis: 100%;
-    border-radius: 4px;
-    background: white;
-    border: 1px solid #000;
     justify-content: space-between;
-    opacity: .85;
     flex-wrap: wrap;
-    border-radius: 0;
-
 }
 
-.row > * {
+#tutorDiv {
+    width: 100%;
     display: flex;
-    align-self: stretch;
-    justify-content: space-between;
-    font-size: 2vw;
-    font-weight: 900;
-    width: 30%;
+    flex-direction: column;
+    align-items: center;
+    height: 0;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
 }
 
-.remain {
-    background: #bababa;
+#tutorDiv * {
+    margin: 5px;
+}
+
+#tutorDiv table {
+    white-space: nowrap;
+}
+
+#tutorDiv table tbody {
+    min-width: 200px;
+    width: 350px;
+}
+
+#tutorDiv textarea {
+    margin: 5px;
+    padding: 0;
+    width: 95%;
+}
+
+.tutorInnerDiv {
+    display: flex;
+    justify-content: space-around;
+}
+
+.section_2 {
+    display: flex;
+    width: 100%;
     border: 1px solid black;
-    padding: 0 27px;
+    flex-wrap: wrap;
+    margin: 5px 0px;
+    padding: 5px;
+    background: #dbdbdb;
+    justify-content: space-around;
+    overflow: hidden;
+    position: fixed;
+    /* opacity: 0; */
+}
+
+#detailHead {
+    height: 30px;
+}
+
+.section_2 > div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+    border: 1px solid black;
+    padding: 5px;
+    margin-top: 10px;
+    background: navajowhite;
+}
+
+.section_2 > div > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 5px;
+}
+
+.section_2 > div > div > div:nth-child(odd) {
+    font-weight: 900;
+    background: #406c7e;
+    color: white;
+    border: 1px solid black;
+    align-items: center;
+    padding: 0 5px;
+    font-size: 0.8rem;
+}
+
+.section_2 > div > div > div:nth-child(even) {
+    font-weight: 900;
+    padding: 0px 5px;
+    color: black;
+    border: 1px solid black;
+    margin: 5px 0;
+    background: white;
+    align-items: center;
+    font-size: 0.8rem;
+}
+
+.hoursDiv > div > div {
+    width: 3rem;
+    text-align: center;
+}
+
+.hoursDiv > div > div:nth-child(4) {
+    width: 1.2rem;
+}
+
+.hoursDiv > div > div:nth-child(6) {
+    width: 1.2rem;
+    height: 0.9rem;
 }
 
 .titleDiv {
     display: flex;
     justify-content: space-between;
-}
-
-.tc {
-    justify-content: center;
 }
 
 .title {
@@ -102,33 +185,80 @@ nav {
 }
 
 table {
-    width: 48%;
+    width: 100%;
 }
 
 tr {
     border: 1px solid #000;
+    background: white;
 }
 
-tr:nth-child(odd) {
-    background: white;
+tr td:nth-child(1), tr th:nth-child(1) {
+    width: 10%;
+    text-align: center;
+}
+
+tr td:nth-child(1) input {
+    width: 25px;
+    text-align: center;
+    font-weight: 900;
+}
+
+tr td:nth-child(2), tr th:nth-child(2) {
+    width: 15%;
+    text-align: center;
+    font-weight: 900;
+    font-size: .9rem;
+}
+
+tr td:nth-child(3), tr th:nth-child(3) {
+    width: 15%;
+    text-align: center;
+    padding: 3px;
+}
+
+tr td:nth-child(3) button {
+    background: #eded0059;
+    color: black;
+}
+
+tr td:nth-child(4), tr th:nth-child(4) {
+    width: 25%;
+    text-align: center;
+}
+
+tr td:nth-child(5), tr th:nth-child(5) {
+    width: 20%;
+    text-align: center;
+}
+
+tr td:nth-child(5) button {
+    background: #6b0000e3;
+}
+
+tr td:nth-child(6), tr th:nth-child(6) {
+    width: 20%;
+    text-align: center;
+    font-weight: 900;
+}
+
+tr td:nth-child(6) {
+    width: 20%;
+    text-align: center;
+    font-weight: 900;
+    font-size: 1.3rem;
 }
 
 th {
     border: 1px solid black;
-    background: #484848;
-    color: white;
-    text-align: left;
+    background: white;
+    color: black;
+    height: 2rem;
+    text-align: center;
     padding: 0 0 0 10px;
-    font-size: 1.5vw;
+    font-size: 1.2rem;
+    font-weight: 900;
 }
-
-td {
-    padding: 0 0 0 10px;
-    border: 1px solid #000;
-    font-size: 1vw;
-}
-
-
 
 .datesDiv > span:nth-child(odd) {
     font-size: 1vw;
@@ -230,7 +360,7 @@ td {
 }
 
 button {
-    background: seagreen;
+    background: #406c7e;
     color: white;
     border-radius: 5px;
     font-size: 1.5vw;
@@ -240,37 +370,60 @@ button {
 
 #newClientDiv {
     border-radius: 4px;
-    margin-bottom: 20px;
-    background: white;
     display: flex;
     justify-content: space-between;
-    flex-wrap: nowrap;
-    border: 2px solid #000;
+    flex-wrap: wrap;
 }
 
 #newClientDiv > * {
     align-items: center;
     width: 12%;
-    margin: 0 5px;
-    /* border: 1px solid #000; */
     border-radius: 0;
     font-size: 1vw;
     text-align: center;
 }
 
+#addHeroDiv {
+    border: 2px solid #000;
+    width: 100%;
+    margin-top: 5px;
+    padding: 5px;
+    background: #c4c4c4;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#addHeroDiv input {
+    border: 2px solid #000;
+    height: 1.5rem;
+    text-align: center;
+}
+
+#addHeroDiv button {
+    height: 2rem;
+    border-radius: 0;
+    background: #ffffb2;
+    color: black;
+    font-size: 1.2rem;
+}
+
 #activeClients, #remainHours {
-    background: #810a0a;
+    background: teal;
     border: 2px solid #000;
     justify-content: center;
+    font-size: 1rem;
     color: white;
     padding: 5px;
     width: auto;
+    font-weight: 900;
 }
 
 #summary {
-    width: 30%;
+    width: 100%;
     border: 2px solid #000;
-    background: lightskyblue;
+    background: #c4c4c4;
     padding: 5px;
     font-size: 1.2vw;
+    display: flex;
+    justify-content: space-around;
 }
