--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -56,6 +56,7 @@ label {
     overflow: hidden;
     padding: 0;
     margin: 0;
+    border: none;
 }
 
 #tutorDiv * {
@@ -73,8 +74,8 @@ label {
 
 #tutorDiv textarea {
     margin: 5px;
-    padding: 0;
-    width: 95%;
+    padding: 5px;
+    width: 90%;
 }
 
 .tutorInnerDiv {
@@ -177,9 +178,12 @@ label {
     z-index: 1;
     border: 1px solid black;
     border-radius: 5px;
-    width: fit-content;
-    right: 0;
+    max-width: 350px;
+    right: -60%;
     color: black;
+    text-wrap: auto;
+    text-align: left;
+    font-size: 0.9rem;
 }
 
 .hourRow > div:nth-child(4) {
@@ -363,6 +367,7 @@ th {
 
 .hoursDiv > table > tbody > tr > td {
     border: 1px solid #000;
+    height: 0.5vw;
 }
 
 .hoursDiv > table > tbody > tr:nth-child(even) {
@@ -452,7 +457,7 @@ button {
     font-size: 1.2rem;
 }
 
-#activeClients, #remainHours {
+.activeClients, #remainHours {
     background: teal;
     border: 2px solid #000;
     justify-content: center;
