--- a/public/assets/css/style3.css
+++ b/public/assets/css/style3.css
@@ -258,7 +258,7 @@ button {
     text-align: center;
 }
 
-#activeClients, #remainHours {
+.activeClients, #remainHours {
     background: #810a0a;
     border: 2px solid #000;
     justify-content: center;
